--- a/Launcher/Launcher/MainWindow.xaml
+++ b/Launcher/Launcher/MainWindow.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-    Title="WindowRegAndEnd" Height="252.577" Width="340.206" >
+    Title="Окно входа в программу" Height="252.577" Width="340.206" >
     <Grid>
         <TabControl HorizontalAlignment="Left" Height="222" VerticalAlignment="Top" Width="346" Margin="0,0,-14,0">
             <TabItem Header="Регистрация" HorizontalAlignment="Center">
@@ -20,24 +20,24 @@
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition Width="2*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Label Name="Name_lbl" Grid.Row="0" Grid.Column="0" Content="Введите Имя"/>
-                    <TextBox Name="Name_tbx" Grid.Row="0" Grid.Column="1" />
-                    <Label Name="Family_lbl" Grid.Row="1" Grid.Column="0" Content="Введите Фамилию"/>
-                    <TextBox Name="Family_tbx" Grid.Column="1" Grid.Row="1"/>
-                    <Label Name="Login_lbl" Grid.Row="2" Grid.Column="0" Content="Введите Логин"/>
-                    <TextBox Name="Login_tbx" Grid.Column="2" Grid.Row="2"/>
-                    <Label Name="Password_lbl1" Grid.Row="3" Grid.Column="0" Content="Введите пароль" />
-                    <PasswordBox Name="Passwb1" Grid.Row="3" Grid.Column="1"/>
-                    <Label Name="Password_lbl2" Grid.Row="4" Grid.Column="0" Content="Повторите пароль"/>
-                    <PasswordBox Name="Passwb2" Grid.Column="1" Grid.Row="4"/>
-                    <Label Name="email_lbl" Grid.Column="0" Content="Электронная почта" Grid.Row="5"/>
+                    <Label Name="Name_lbl" Grid.Row="0" Grid.Column="0" Content="Введите Имя" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <TextBox Name="Name_tbx" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Family_lbl" Grid.Row="1" Grid.Column="0" Content="Введите Фамилию" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <TextBox Name="Family_tbx" Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Login_lbl" Grid.Row="2" Grid.Column="0" Content="Введите Логин" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <TextBox Name="Login_tbx" Grid.Column="2" Grid.Row="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Password_lbl1" Grid.Row="3" Grid.Column="0" Content="Введите пароль" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <PasswordBox Name="Passwb1" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Password_lbl2" Grid.Row="4" Grid.Column="0" Content="Повторите пароль" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <PasswordBox Name="Passwb2" Grid.Column="1" Grid.Row="4" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="email_lbl" Grid.Column="0" Content="Электронная почта" Grid.Row="5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <TextBox Name="email_tbx" Grid.Column="1" Grid.Row="5"/>
                     <Button Name="Accept_btn" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Content="Зарегистрироваться" Click="Accept_btn_Click" />
                     <!--<Label-->
                 </Grid>
             </TabItem>
             <TabItem Header="Вход">
-                <Grid Background="#FFE5E5E5" Margin="0,0,11,0">
+                <Grid Background="#FFE5E5E5"  Margin="0,0,11,0">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
@@ -47,9 +47,10 @@
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition Width="3*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Логин" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="Логин" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="0"  BorderBrush="Black" Background="White" BorderThickness="0.4" />
+                    
                     <TextBox Name="EntryLogin"  Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2"/>
-                    <Label Content="Пароль" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="Пароль" Grid.Column="0" Grid.Row="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <PasswordBox Name="EntryPassword"  Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"/>
                     <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="3" Content="Вход в программу" Click="Button_Click"/>
                 </Grid>
