--- a/Launcher/Launcher/MainWindow.xaml
+++ b/Launcher/Launcher/MainWindow.xaml
@@ -2,12 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-    Title="Окно входа в программу" Height="252.577" Width="383.206" >
+    Title="Окно входа в программу" Height="273.577" Width="409.206" >
     <Grid>
-        <TabControl HorizontalAlignment="Left" Height="222" VerticalAlignment="Top" Width="375" Margin="0,0,-43,0">
+        <TabControl HorizontalAlignment="Left" Height="222" VerticalAlignment="Top" Width="375">
             <TabItem Header="Регистрация" HorizontalAlignment="Center">
-                <Grid Background="#FFE5E5E5" >
+                <Grid Background="#FFE5E5E5" Margin="0,0,-27,-25" >
                     <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
@@ -20,19 +21,22 @@
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition Width="2*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Label Name="Name_lbl" Grid.Row="0" Grid.Column="0" Content="Введите Имя" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <TextBox Name="Name_tbx" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Family_lbl" Grid.Row="1" Grid.Column="0" Content="Введите Фамилию" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <TextBlock>
+                        
+                    </TextBlock>
+                    <Label Name="Name_lbl" Grid.Row="1" Grid.Column="0" Content="Введите Имя" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <TextBox Name="Name_tbx" Grid.Row="1" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Family_lbl" Grid.Row="2" Grid.Column="0" Content="Введите Фамилию" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <TextBox Name="Family_tbx" Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <Label Name="Login_lbl" Grid.Row="2" Grid.Column="0" Content="Введите Логин" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <TextBox Name="Login_tbx" Grid.Column="2" Grid.Row="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Password_lbl1" Grid.Row="3" Grid.Column="0" Content="Введите пароль" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Password_lbl1" Grid.Row="3" Grid.Column="0" Content="Введите Пароль" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <PasswordBox Name="Passwb1" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <Label Name="Password_lbl2" Grid.Row="4" Grid.Column="0" Content="Повторите пароль" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <PasswordBox Name="Passwb2" Grid.Column="1" Grid.Row="4" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <Label Name="Password_lbl2" Grid.Row="5" Grid.Column="0" Content="Повторите пароль" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
+                    <PasswordBox Name="Passwb2" Grid.Column="1" Grid.Row="5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
                     <Label Name="email_lbl" Grid.Column="0" Content="Электронная почта" Grid.Row="5" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" Background="White" BorderThickness="0.4"/>
-                    <TextBox Name="email_tbx" Grid.Column="1" Grid.Row="5"/>
-                    <Button Name="Accept_btn" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Content="Зарегистрироваться" Click="Accept_btn_Click" />
+                    <TextBox Name="email_tbx" Grid.Column="1" Grid.Row="6"/>
+                    <Button Name="Accept_btn" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Content="Зарегистрироваться" Click="Accept_btn_Click" />
                     <!--<Label-->
                 </Grid>
             </TabItem>
