--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -38,7 +38,7 @@
                 <RowDefinition></RowDefinition>  
             </Grid.RowDefinitions>
             <Label Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="1"/>
-            <Label HorizontalAlignment="Right" Content="Здравствуйте Валерий Петрович" BorderBrush="Black" BorderThickness="0.5" Background="WhiteSmoke" Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2"/>
+            <Label HorizontalAlignment="Right" Content="Здравствуйте, Валерий Петрович" BorderBrush="Black" BorderThickness="0.5" Background="WhiteSmoke" Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2"/>
             <Label Content="Помошник Машиниста" FontSize="28" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
         
