usercontrol измнеит ь и попарвить

--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -40,12 +40,12 @@
             </Grid.RowDefinitions>
             <Label x:Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="1"/>
             <Label HorizontalAlignment="Right" Content="Здравствуйте, Валерий Петрович" BorderBrush="Black" BorderThickness="0.5" Background="WhiteSmoke" Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2"/>
-            <Label Content="Помошник Машиниста" FontSize="28" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label Content="Помощник Машиниста" FontSize="28" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
-        <ListBox Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" >
-            <ListBoxItem>
-                <local:MenuItemControl HorizontalAlignment="Left"/>
-            </ListBoxItem>
+        <ListBox Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" HorizontalContentAlignment="Left" HorizontalAlignment="Left" >
+            
+            <local:MenuItemControl HorizontalAlignment="Left" Width="754" Height="auto" />
+            
         </ListBox>
 
 
