--- a/Launcher/Launcher/MenuItemControl.xaml
+++ b/Launcher/Launcher/MenuItemControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="auto" Width="580">
+             mc:Ignorable="d" Height="auto" Width="auto">
     <Grid Width="auto" Height="auto">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -16,15 +16,15 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
-            <TextBlock Name="TextBoxMain" Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" TextAlignment="Center" VerticalAlignment="Center" Background="#B00000" Foreground="White" TextWrapping="WrapWithOverflow">
-            Нормативные документы 
+        <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3" Margin="0,0,0,0.333">
+            <TextBlock Name="TextBoxMain" Grid.Row="0" Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Background="#B00000" Foreground="White" TextWrapping="Wrap" Height="70" Width="151">
+            Нормативные документы
             </TextBlock>
-        </Grid>
-        <Grid Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White" Width="auto" Height="auto">
-            <TextBlock Name="TextBoxOpis" VerticalAlignment="Top" TextAlignment="Left" TextWrapping="Wrap">
-                Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White" Width="auto" Height="auto">
+            <TextBlock Name="TextBoxOpis" VerticalAlignment="Top" TextAlignment="Center" TextWrapping="Wrap" Margin="10,0,0,0">
+                 Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам
             </TextBlock>
-        </Grid>
+        </StackPanel>
     </Grid>
 </UserControl>
