--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -24,7 +24,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7" Background="LightGray">
+        <Grid x:Name="grid" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7" Background="LightGray">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -42,10 +42,8 @@
             <Label HorizontalAlignment="Right" Content="Здравствуйте, Валерий Петрович" BorderBrush="Black" BorderThickness="0.5" Background="WhiteSmoke" Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2"/>
             <Label Content="Помощник Машиниста" FontSize="28" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
-        <ListBox Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" HorizontalContentAlignment="Left" HorizontalAlignment="Left" >
-            
-            <local:MenuItemControl HorizontalAlignment="Left" Width="754" Height="auto" />
-            
+        <ListBox x:Name="listBox" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" Grid.IsSharedSizeScope="True">
+            <local:MenuItemControl HorizontalAlignment="Left" Width="{Binding Width, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindowLauncher}}}" />
         </ListBox>
 
 
