--- a/Launcher/Launcher/MenuItemControl.xaml
+++ b/Launcher/Launcher/MenuItemControl.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="auto" Width="auto">
-    <Grid Width="auto" Height="auto">
+             mc:Ignorable="d">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
@@ -17,13 +17,13 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3" Margin="0,0,0,0.333">
-            <TextBlock Name="TextBoxMain" Grid.Row="0" Grid.Column="0" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Background="#B00000" Foreground="White" TextWrapping="Wrap" Height="70" Width="151">
+            <TextBlock Name="TextBoxMain" Grid.Row="0" Grid.Column="0" TextAlignment="Center" Background="#B00000" Foreground="White" TextWrapping="Wrap">
             Нормативные документы
             </TextBlock>
         </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White" Width="auto" Height="auto">
-            <TextBlock Name="TextBoxOpis" VerticalAlignment="Top" TextAlignment="Center" TextWrapping="Wrap" Margin="10,0,0,0">
-                 Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам
+        <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White">
+            <TextBlock Name="TextBoxOpis" TextWrapping="Wrap" Margin="10,0,0,0">
+                 Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам .............................................................................................................123123123123111111113
             </TextBlock>
         </StackPanel>
     </Grid>
