--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -43,7 +43,7 @@
             <Label Content="Помощник Машиниста" FontSize="28" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
         <ListBox x:Name="listBox" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" Grid.IsSharedSizeScope="True">
-            <local:MenuItemControl HorizontalAlignment="Left" Width="{Binding Width, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindowLauncher}}}" />
+            <local:MenuItemControl HorizontalAlignment="Left" Width="{Binding Width, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindowLauncher}}}" Height="49" />
         </ListBox>
 
 
