--- a/Launcher/Launcher/MenuItemControl.xaml
+++ b/Launcher/Launcher/MenuItemControl.xaml
@@ -16,14 +16,14 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3" Margin="0,0,0,0.333">
+        <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
             <TextBlock Name="TextBoxMain" Grid.Row="0" Grid.Column="0" TextAlignment="Center" Background="#B00000" Foreground="White" TextWrapping="Wrap">
             Нормативные документы
             </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White">
-            <TextBlock Name="TextBoxOpis" TextWrapping="Wrap" Margin="10,0,0,0">
-                 Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам .............................................................................................................123123123123111111113
+            <TextBlock Name="TextBoxOpis" TextWrapping="Wrap" Margin="5,0">
+                 Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам
             </TextBlock>
         </StackPanel>
     </Grid>
