--- a/Launcher/Launcher/MenuItemControl.xaml
+++ b/Launcher/Launcher/MenuItemControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="50">
+             mc:Ignorable="d" Height="50" Background="Black" BorderBrush="#B00000" BorderThickness="1" Margin="5,5,5,5">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -17,7 +17,7 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3" Margin="0,0,0,0.333">
-            <TextBlock Name="TextBlockTitle" Grid.Row="0" Grid.Column="0" TextAlignment="Center" Background="#B00000" Foreground="White" TextWrapping="Wrap">
+            <TextBlock Name="TextBlockTitle" Grid.Row="0" Grid.Column="0" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#B00000"  Foreground="White" TextWrapping="Wrap" >
             Нормативные документы
             </TextBlock>
         </StackPanel>
