--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" Height="85" Background="LightGray" BorderBrush="#B00000" BorderThickness="0.5" Margin="0,0,4,0">
-    <Grid>
+    <Grid Background="#B00000">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
@@ -16,8 +16,8 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
-            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#B00000"  Foreground="White" TextWrapping="Wrap" Margin="2,0,1,0" Height="83" ><Run Text="Нормативные документы"/></TextBlock>
+        <StackPanel Grid.Row="1" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
+            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="#B00000"  Foreground="White" TextWrapping="Wrap" Margin="2,0,1,0" Height="83" >Нормативные документы </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" Margin="10,0,5,0">
