--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -17,7 +17,9 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
-            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#B00000"  Foreground="White" TextWrapping="Wrap" Margin="2,0,1,0" Height="83" ><Run Text="Нормативные документы"/></TextBlock>
+            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Background="#B00000"  Foreground="White" TextWrapping="Wrap" Margin="2,0,1,0" Height="83" >
+                Нормативные документы
+            </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" Margin="10,0,5,0">
