--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="85" Background="LightGray" BorderBrush="#B00000" BorderThickness="0.5" Margin="0,0,4,0">
+             mc:Ignorable="d" Height="65.333" Background="LightGray" BorderBrush="#B00000" BorderThickness="0.5" Margin="0,1,1,0">
     <Grid Background="#B00000">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -17,11 +17,11 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="1" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
-            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="#B00000"  Foreground="White" TextWrapping="Wrap" Margin="2,0,1,0" Height="83" >Нормативные документы </TextBlock>
+            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="#B00000"  Foreground="White" TextWrapping="Wrap" Height="83" ></TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="3" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" Margin="10,0,5,0">
-                 Модуль "Нормативные документы" предназначен для предоставления в интерактивном виде межгосударственных, национальных и отраслевых стандартов,нормативно технической документации, определяющих требования к техническим системам и его компонентам
+                 
             </TextBlock>
         </StackPanel>
     </Grid>
