--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -20,7 +20,7 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="1" Grid.Column="0" Background="#B00000" Grid.RowSpan="3">
-            <TextBlock x:Name="TextBlockTitle" Margin="5" TextAlignment="Center" FontWeight="Bold" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="#B00000" FontSize="16" Foreground="White" TextWrapping="Wrap" ></TextBlock>
+            <TextBlock x:Name="TextBlockTitle" Margin="5" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Background="#B00000" FontSize="16" Foreground="White" TextWrapping="Wrap" ></TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Grid.ColumnSpan="6" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" FontSize="14" Margin="10,0,5,0">
