--- a/Launcher/Launcher/App.xaml
+++ b/Launcher/Launcher/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Launcher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindowLauncher.xaml">
+             StartupUri="LoginWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
