--- a/Launcher/Launcher/MainWindowLauncher.xaml
+++ b/Launcher/Launcher/MainWindowLauncher.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:Launcher" x:Class="Launcher.MainWindowLauncher"
-        Title="MainWindowLauncher" WindowState="Maximized" Loaded="MetroWindow_Loaded" >
+        Title="Помощник машиниста мобильное приложение" WindowState="Maximized" Loaded="MetroWindow_Loaded" >
     <Grid ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -38,9 +38,9 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Label x:Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="1"/>
-            <Label HorizontalAlignment="Right" Content="Здравствуйте, Валерий Петрович" BorderBrush="Black" BorderThickness="0.5" Background="WhiteSmoke" Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2"/>
-            <Label Content="Помощник Машиниста" FontSize="28" Grid.ColumnSpan="5" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Label x:Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="1" HorizontalContentAlignment="Right"/>
+            <Label HorizontalAlignment="Right" Content="Виктор Викторович"  Grid.Column="6" Grid.Row="0" HorizontalContentAlignment="Right"/>
+            
         </Grid>
         <ListBox x:Name="ListBoxModules" Margin="-6" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden"/>
           
