--- a/Launcher/Launcher/ListBoxItemModuleControl.xaml
+++ b/Launcher/Launcher/ListBoxItemModuleControl.xaml
@@ -3,16 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Height="85" Background="LightGray" BorderBrush="#B00000" BorderThickness="0.5" Margin="0,0,4,0">
-    <Grid Background="#b00000">
+             mc:Ignorable="d"  Background="LightGray" BorderBrush="{StaticResource AccentColorBrush}" BorderThickness="0.5" Margin="0,0,0,0" >
+    <Grid Background="White" >
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="130"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="7*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0">
-            <TextBlock x:Name="TextBlockTitle" Margin="5,20,5,5" TextAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Top" Background="#B00000" FontSize="16" Foreground="White" TextWrapping="Wrap" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="130"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
+            <TextBlock x:Name="TextBlockTitle" TextAlignment="Center"   Foreground="{StaticResource AccentColorBrush}" FontSize="16"  TextWrapping="Wrap" />
         </StackPanel>
-        <StackPanel Grid.Column="1" Background="White">
+        <StackPanel Grid.Column="1" Grid.RowSpan="2" Background="White">
             <TextBlock Name="TextBlockDescription" TextWrapping="Wrap" FontSize="14" Margin="10,20,5,0"/>
         </StackPanel>
     </Grid>
