--- a/Launcher/Launcher/Resources/Bordoviy.xaml
+++ b/Launcher/Launcher/Resources/Bordoviy.xaml
@@ -6,12 +6,12 @@
 
     <Color x:Key="HighlightColor">#970000</Color>
 
-    <Color x:Key="AccentColor">#B00000</Color>
-    <!--60%-->
-    <Color x:Key="AccentColor2">#CA0000</Color>
-    <!--40%-->
-    <Color x:Key="AccentColor3">#E30000</Color>
-    <!--20%-->
+    <Color x:Key="AccentColor">#26A65B</Color>
+    <!--60% Выделение-->
+    <Color x:Key="AccentColor2">#26A65B</Color>
+    <!--40% -->
+    <Color x:Key="AccentColor3">#E30000</Color> 
+    <!--20% Наведение--> 
     <Color x:Key="AccentColor4">#FD0000</Color>
 
     <!-- re-set brushes too -->
